# AiiDA-FANS

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  package.yml
docs/: index.md  installation.md  lgpl-attachment.md  usage.md
docs/introduction/: adding-microstructure-data.md  analysing-results.md  getting-started.md  installing-the-plugin.md  running-fans.md
docs/reference/: plugin-api.md  utils-api.md
docs/tutorial/: installation.md  installing-the-tutorial.md  usage.md  using-the-tutorial.md
installation/: index.html
introduction/adding-microstructure-data/: index.html
introduction/analysing-results/: index.html
introduction/getting-started/: index.html
introduction/installing-the-plugin/: index.html
introduction/running-fans/: index.html
lgpl-attachment/: index.html
license/: index.html
reference/plugin-api/: index.html
reference/utils-api/: index.html
search/: search_index.json
src/aiida_fans/: calculations.py  data.py  helpers.py  parsers.py  readme_submit.py  utils.py
tutorial/installing-the-tutorial/: index.html
tutorial/using-the-tutorial/: index.html
usage/: index.html
