[project]
name = "aiida-fans"
dynamic = ["version"]
description = "AiiDA plugin for FANS, an FFT-based homogenization solver."
urls = {Documentation = "http://aiida-fans.readthedocs.io/en/latest/", Source = "https://github.com/ethan-shanahan/aiida-fans" }
authors = [{name = "Ethan Shanahan", email = "ethan.shanahan@gmail.com"}]
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Framework :: AiiDA"
]
keywords = ["aiida", "fans", "plugin"]
requires-python = ">=3.11"
dependencies = [
    "aiida-core>=2.6",
    "h5py"
]

# Entry Points
[project.entry-points]
"aiida.data" = { "fans" = "aiida_fans.data:FANSParameters" }
"aiida.calculations" = { "fans" = "aiida_fans.calculations:FANSCalculation" }
"aiida.parsers" = { "fans" = "aiida_fans.parsers:FANSParser" }
"aiida.cmdline.data" = { "fans" = "aiida_fans.cli:data_cli" }

# Build System
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


# Tools

## Project Tools: pixi
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

### pixi: default dependencies (overwrites [project] dependencies with conda)
[tool.pixi.dependencies]
aiida-core = ">=2.6"
h5py = "*"
[tool.pixi.pypi-dependencies]
# None

### pixi: default tasks
[tool.pixi.tasks]
# None

### pixi: features
[tool.pixi.feature.self]
pypi-dependencies = {aiida-fans = { path = ".", editable = true }}
[tool.pixi.feature.plugin]
dependencies = {aiida-fans = "==0.2.0"}

[tool.pixi.feature.aiida-core]
dependencies = {"aiida-core" = "2.6.*"}
[tool.pixi.feature.aiida-core-pre-release]
dependencies = {"aiida-core" = "==2.7.0rc1"}
[tool.pixi.feature.aiida-core-services]
dependencies = {"aiida-core.services" = "2.*"}
tasks = {start = "rabbitmq-server -detached", stop = "rabbitmqctl stop"}

[tool.pixi.feature.h5py]
dependencies = {h5py = "*"}

[tool.pixi.feature.fans]
dependencies = {fans = "0.4.*"}

[tool.pixi.feature.ruff]
dependencies = {ruff = "*"}
tasks = {fmt = "ruff check"}
[tool.pixi.feature.scalene]
dependencies = {scalene = "*"}
[tool.pixi.feature.pytest]
dependencies = {pytest = "*"}
tasks = {test = "echo tests not implemented"}

[tool.pixi.feature.marimo]
dependencies = {marimo = "0.13.*"}
tasks = {tutorial = "marimo edit tutorial.py"}

[tool.pixi.feature.build]
pypi-dependencies = {build = "*"}
tasks = {build-dist = "python -m build"}
[tool.pixi.feature.sphinx]
dependencies = {sphinx = "*", sphinx-book-theme = "*"}
tasks = {build-docs = "sphinx-build -M html docs/source docs/build"}

[tool.pixi.feature.py311]
dependencies = {python = "3.11.*"}
[tool.pixi.feature.py312]
dependencies = {python = "3.12.*"}
[tool.pixi.feature.py3]
dependencies = {python = "3.*"}


### pixi: environments
[tool.pixi.environments]
dev = { features = ["self", "ruff"], solve-group = "default" }
tutorial = { features = ["self", "fans", "marimo"], solve-group = "tutorial" }
benchmark = { features = ["self", "aiida-core-pre-release", "fans", "scalene"], solve-group = "benchmark" }
rabbit = { features = ["py3", "self", "aiida-core-services", "fans"], no-default-feature = true, solve-group = "rabbit" }
# CI envs:
fmt = { features = ["py312", "ruff"], no-default-feature = true }
dist = { features = ["py312", "build"], no-default-feature = true }
docs = { features = ["py312", "sphinx"], no-default-feature = true }
test-py311 = { features = ["py311", "self", "fans", "pytest"], solve-group = "py311" }
test-py312 = { features = ["py312", "self", "fans", "pytest"], solve-group = "py312" }


## Build Tools: setuptools_scm
[tool.setuptools_scm]
version_file = "src/aiida_fans/_version.py"

## Style Tools: ruff
[tool.ruff]
extend-exclude = [
    "conf.py",
    "tutorial.py"
]
line-length = 120
[tool.ruff.lint]
ignore = [
    'PLR2004',  # Magic value used in comparison
    "D417"  # Documentation for every function parameter
]
select = [
    'E',  # pydocstyle
    'W',  # pydocstyle
    "D",  # pydocstyle
    'F',  # pyflakes
    'I',  # isort
    'N',  # pep8-naming
    'PLC',  # pylint-convention
    'PLE',  # pylint-error
    'PLR',  # pylint-refactor
    'PLW',  # pylint-warning
    'RUF'  # ruff
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Allow unused variables when underscore-prefixed.
pydocstyle = {convention = "google"}

## Test Tools: pytest
[tool.pytest.ini_options]
[tool.coverage]
source = ["src/aiida_fans"]

## Docs Tools: sphinx
# None
